# on-chain-identity-gateway

./: .env.example  .eslintignore  .eslintrc  .eslintrc.yml  .gitignore  CHANGELOG.md  LICENSE  README.md  hardhat.config.js  index.md  lerna.json  nyc.config.js  package-lock.json  package.json  test-results.xml  tsconfig.build.json  tsconfig.json
.husky/: pre-commit
casper/integration-lib/: Cargo.toml  README.md
casper/integration-lib/src/: borsh.rs  error.rs  lib.rs
protocol/token-usage-settlement/program/programs/pyth-test/: Cargo.toml
protocol/token-usage-settlement/program/programs/pyth-test/src/: lib.rs  util.rs
protocol/token-usage-settlement/program/programs/usage/: Cargo.toml
solana/integration-lib/: Cargo.toml  README.md
solana/integration-lib/src/: borsh.rs  error.rs  instruction.rs  lib.rs  networks.rs  state.rs  test_utils.rs
solana/program/: .gitignore  Cargo.toml  README.md  notes.md  package-lock.json  package.json  program-id.md
solana/program/cli/: Cargo.toml
solana/program/cli/src/: lib.rs
solana/program/programs/gateway/: Cargo.toml  README.md
solana/program/programs/gateway/src/: entrypoint.rs  lib.rs  processor.rs  state.rs
solana/program/programs/gateway/tests/: gateway_context.rs
solana/program/src/: borsh.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  networks.rs  processor.rs  program_borsh.rs  state.rs  test_utils.rs
solana/program/tests/: burn_gateway_token.rs  compile_test.rs  functional.rs  gatekeeper_network_operations.rs  gateway.spec.ts  gateway_context.rs  issue_gateway_token.rs  misc_gateway_token_operations.rs  multiple_networks.rs  set_gateway_token_state.rs  update_gateway_token_expiry.rs
solana/program/tests/common/: gateway_context.rs  mod.rs  util.rs
solana/program_v2/: .eslintrc.yaml  Anchor.toml  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
solana/program_v2/.husky/: pre-commit
solana/program_v2/cli/: .eslintrc  package.json  tsconfig.json
solana/program_v2/cli/src/: GatewayService.ts
solana/program_v2/cli/src/lib/: connection.ts  constants.ts  types.ts  utils.ts
solana/program_v2/cli/src/utils/: GatewayService.ts  close-network.ts  create-network.ts  gateway-v2.ts  gateway_v2.json  state.ts  update-network.ts
solana/program_v2/client/: package.json  tsconfig.build.json
solana/program_v2/client/src/: GatewayService.ts  close-network.ts  create-network.ts  state.ts  update-network.ts
solana/program_v2/client/src/lib/: connection.ts  constants.ts  types.ts  util.ts  utils.ts
solana/program_v2/client/test/: close-network.test.ts  create-network.test.ts
solana/program_v2/docs/: index.html
solana/program_v2/idl/: package.json  tsconfig.json
solana/program_v2/idl/src/: gateway_v2.ts
solana/program_v2/programs/gateway_v2/: Cargo.toml  README.md
solana/program_v2/programs/gateway_v2/src/: constants.rs  errors.rs  lib.rs  util.rs
solana/program_v2/scripts/: createTestFixtureAccount.ts
solana/program_v2/src/: AdminService.ts  GatekeeperService.ts  GatewayPassService.ts  GatewayService.ts  NetworkService.ts  Service.ts  create-network.ts  gateway_v2.ts  in_place.rs  lib.rs  payment_accounts.rs  update-network.ts  util.rs
solana/program_v2/src/account/: network.rs
solana/program_v2/src/accounts/: gatekeeper.rs  mod.rs  network.rs  pass.rs
solana/program_v2/src/arguments/: mod.rs  network_account.rs  pass_account.rs  payment_accounts.rs
solana/program_v2/src/instructions/: add_network_fees.rs  close_network.rs  create_gatekeeper.rs  create_network.rs  gatekeeper_withdraw.rs  issue_pass.rs  mod.rs  network_withdraw.rs  refresh_pass.rs  set_gatekeeper_state.rs  set_pass_data.rs  set_pass_state.rs  update_gatekeeper.rs  update_network.rs  verify_pass.rs
solana/program_v2/src/lib/: connection.ts  constants.ts  types.ts  utils.ts  wrappers.ts
solana/program_v2/src/pda/: mod.rs
solana/program_v2/src/types/: fees.rs  key_flags.rs  mod.rs  operation.rs  optional_non_system_pubkey.rs
solana/program_v2/src/utils/: AbstractService.ts
solana/program_v2/tests/: Test.base.account.toml  create_network.rs  gateway_v2.ts  network.ts  package.json
solana/program_v2/tests/fixtures/accounts/: alt-gatekeeper-account.json  alt-network-account.json  gatekeeper-alt.json  gatekeeper-invalid.json  gatekeeper.json  idl-account.json  mint-authority.json  network-account.json  network-alt.json  network.json
solana/program_v2/tests/fixtures/keypairs/: 7aHML6LXPtEuUDu4Azv52KbgEqdSDk9syqFvCAE63ZT5.json  9SkxBuj9kuaJQ3yAXEuRESjYt14BcPUTac25Mbi1n8ny.json  B4951ZxztgHL98WT4eFUyaaRmsi6V4hBzkoYe1VSNweo.json  DuqrwqMDuVwgd2BNbCFQS5gwNuZcfgjuL6KpuvjGjaYa.json  HkUkv3CXbt7uNu491VzrX7TRkV41NkhtGY3rzkZwYRaa.json
solana/program_v2/tests/gatekeeper-suite/: Test.toml  close-gatekeeper.test.ts  create-gatekeeper.test.ts  gatekeeper-withdraw.test.ts  set-gatekeeper-state.test.ts  update-gatekeeper.test.ts
solana/program_v2/tests/network-suite/: Test.toml  close-network.test.ts  create-network.test.ts  update-network.test.ts
solana/program_v2/tests/pass-suite/: Test.toml  change_pass_gatekeeper.ts  expire.test.ts  issue.test.ts  refresh.test.ts  set_data.test.ts  set_state.test.ts  util.ts  verify.test.ts
solana/program_v2/tests/util/: constants.ts  lib.ts
solana/programs/anchor-gateway/: Cargo.toml
solana/programs/anchor-gateway/client/: .eslintrc  package.json  tsconfig.build.json  tsconfig.json
solana/programs/anchor-gateway/client/src/: state.ts
solana/programs/anchor-gateway/client/test/: create-network.test.ts
solana/programs/anchor-gateway/src/: lib.rs
solana/programs/anchor-gateway/src/arguments/: network_account.rs
solana/programs/anchor-gateway/src/instructions/: create_network.rs  mod.rs
solana/programs/anchor-gateway/src/pda/: mod.rs  pda.rs
solana/programs/anchor-gateway/src/program_files/: gatekeeper.rs  mod.rs  network.rs  pass.rs
solana/programs/anchor-gateway/src/types/: fees.rs  key_flags.rs  mod.rs  operation.rs  optional_non_system_pubkey.rs
solana/programs/anchor-gateway/src/util/: mod.rs  util.rs
(+1373 files in other folders)
