[package]
name = "solana-gateway"
version = "0.0.4"
description = "Solana on-chain identity gateway"
repository = "https://github.com/identity-com/on-chain-identity-gateway"
authors = ["Identity.com <daniel@identity.com>"]
license = "MIT"
edition = "2018"
keywords = ["solana", "identity",  "gateway", "civic"]
homepage = "https://www.identity.com"


[features]
program = []
client = []
test = []
default = ["program"]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
solana-program = "1.7.11"
sol-did = { version = "0.2.0", features = [ "no-entrypoint" ]}
num-derive = "0.3"
num-traits = "0.2.12"
thiserror = "1.0.20"
bitflags = "1.3.2"

[dev-dependencies]
solana-sdk = "1.7.11"
# These are older as solana sdk relies on rand_core 0.5.1
rand = "0.7.3"
rand_chacha = "0.2.2"
