[package]
name = "solana-gateway"
version = "0.2.0"
description = "Solana on-chain identity gateway"
repository = "https://github.com/identity-com/on-chain-identity-gateway"
authors = ["Identity.com <daniel@identity.com>"]
license = "MIT"
edition = "2018"
keywords = ["solana", "identity",  "gateway", "civic"]
homepage = "https://www.identity.com"


[features]
program = []
client = []
test = []
default = ["program"]
no-entrypoint = []

[dependencies]
# This must stay on 0.9.* as solana-program is using 0.9.1
borsh = "0.9.1"
solana-program = "1.15.2"
sol-did = { version = "3.3.0", features = [ "no-entrypoint" ]}
num-derive = "0.3"
num-traits = "0.2.12"
thiserror = "1.0.20"
bitflags = "2.1.0"
static_assertions = "1.1.0"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
solana-sdk = "1.15.2"
# These are older as solana sdk relies on rand_core 0.5.1
rand = "0.7.3"
rand_chacha = "0.2.2"
solana-gateway-program = { path = "../program" }
