[package]
name = "solana-gateway"
version = "0.3.2"
description = "OCIV Gateway Program"
authors = ["Daniel Kelleher <daniel@identity.com>"]
repository = "https://github.com/identity-com/on-chain-identity-gateway"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "^0.10.3"
num-derive = "^0.4.0"
num-traits = "^0.2.16"
solana-program = "^1.16.3"
thiserror = "1.0.44"

[dev-dependencies]
solana-program-test = "^1.16.3"
solana-sdk = "^1.16.3"
tokio = { version = "1.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
