[package]
name = "solana-gateway"
version = "0.5.0"
description = "OCIV Gateway Program"
authors = ["Daniel Kelleher <daniel@identity.com>"]
repository = "https://github.com/identity-com/on-chain-identity-gateway"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.10"
num-derive = "0.4.2"
num-traits = "0.2.18"
solana-program = "=1.17.*"
thiserror = "1.0.57"

[dev-dependencies]
solana-program-test = "=1.17.*"
solana-sdk = "=1.17.*"
tokio = { version = "1.36.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
