[package]
name = "solana-gateway"
version = "0.6.0"
description = "OCIV Gateway Program"
authors = ["Daniel Kelleher <daniel@identity.com>"]
repository = "https://github.com/identity-com/on-chain-identity-gateway"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.2.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
solana-program = "=1.18.*"
thiserror = "1.0.57"

[dev-dependencies]
solana-program-test = "=1.18.*"
solana-sdk = "=1.18.*"
tokio = { version = "1.36.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
