[package]
name = "gateway_program_v2"
version = "0.1.0"
description = "Gateway Program v2"
authors = ["Brett Etter <brett.etter@identity.com>"]
repository = "https://github.com/identity-com/on-chain-identity-gateway"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["entrypoint"]
entrypoint = ["processor"]
processor = []
realloc = []
cpi = []
client = []

[dependencies]
# TODO: Update when 0.3.0 released
cruiser = { version = "0.2.0", git = "https://github.com/identity-com/cruiser", branch = "release/0.3.0", features = ["in_place", "small_vec", "spl-token"] }
bitflags = "1.3.2"

[build-dependencies]
rustc_version = "0.4.0"
