[package]
name = "cli"
version = "0.1.0"
description = "OCIV Gateway Program CLI"
authors = ["Daniel Kelleher <daniel@identity.com>"]
repository = "https://github.com/identity-com/on-chain-identity-gateway"
license = "Apache-2.0"
edition = "2018"

[[bin]]
name = "gateway"
path = "src/bin/main.rs"

[dependencies]
clap = "3.0.0-beta.1"
debug_print = "1.0.0"
rand = { version = "0.7.3" }
solana-client = "=1.18*"
solana-gateway = { path = "../", features = ["no-entrypoint"] }
solana-program = "=1.18*"
solana-sdk = "=1.18*"
thiserror = "1.0"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
