[package]
name = "solana-gateway-program"
version = "0.1.0"
description = "OCIV Gateway Program"
authors = ["Daniel Kelleher <daniel@identity.com>"]
repository = "https://github.com/identity-com/on-chain-identity-gateway"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.8.1"
borsh-derive = "0.8.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.8"
solana-gateway = { path = "../../../integration-lib" }
thiserror = "1.0"
anchor-lang = "0.10.0"
bitflags = "1.2.1"

[dev-dependencies]
solana-program-test = "1.6.8"
solana-sdk = "1.6.8"
tokio = { version = "1.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
name = "gateway"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
