[package]
name = "program_v2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_v2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
#anchor-lang = "0.24.2"
anchor-lang = { git = "https://github.com/callensm/anchor", branch = "fix/realloc" }
bitflags = "1.3.2"
borsh = "0.9.3"
