[package]
name = "solana_anchor_gateway"
version = "2.0.2"
description = "Solana Identity Gateway"
edition = "2021"
authors = ["Identity.com <daniel@identity.com>"]
license = "MIT"
keywords = ["solana", "identity",  "gateway"]
homepage = "https://www.identity.com"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_anchor_gateway"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
bitflags = "1.3.2"
borsh = "0.9.3"
anchor-spl = "0.25.0"